--- a/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -1,3 +1,10 @@
-<h2>{{hero.name | uppercase}} Details</h2>
-<div><span>id: </span>{{hero.id}}</div>
-<div><span>name: </span>{{hero.name}}</div>
+<h2>My heroes</h2>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes"
+      [class.selected]="hero === selectedHero"
+      (click)="onSelect(hero)">
+    <span class="badge">{{hero.id}} </span>{{hero.name}}
+  </li>
+</ul>
+<!--Aqui hacemos un "property binding" de selectedHero a la propiedad/variable hero de hero-detail-->
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
