Punto 5 del tutorial terminado

--- a/angular-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
+++ b/angular-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
@@ -5,8 +5,8 @@
   <div>
     <label>
       name:
-      <input [(ngModel)]="hero.name" placeholder="name" />
+      <input [(ngModel)]="hero.name" placeholder={{hero.name}} />
     </label>
   </div>
-
+  <button (click)="goBack()">Go back</button>
 </div>
