--- a/angular-tour-of-heroes/src/app/app.component.html
+++ b/angular-tour-of-heroes/src/app/app.component.html
@@ -1,3 +1,10 @@
 <h1>{{title}}</h1>
-<app-heroes></app-heroes>
+<!--Aqui acabo de sustituir app-heroes por router-outlet, y yo diria que es porque
+  ya en esta pagina inicial no vamos a cargar el modulo app-heroes concretamente,
+  sino lo que nos diga el router que hay que cargar, dependiendo de la url.-->
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/heroes">Heroes</a>
+</nav>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
