--- a/angular-tour-of-heroes/src/app/app.component.css
+++ b/angular-tour-of-heroes/src/app/app.component.css
@@ -31,3 +31,10 @@ nav a {
   nav a.active {
     color: #039be5;
   }
+
+
+/*
+Copyright Google LLC. All Rights Reserved.
+Use of this source code is governed by an MIT-style license that
+can be found in the LICENSE file at http://angular.io/license
+*/
