--- a/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -1,9 +1,25 @@
-<h2>My heroes</h2>
+<h2>My Heroes</h2>
 <ul class="heroes">
   <li *ngFor="let hero of heroes">
-    <a routerLink="/detail/{{hero.id}}"><span class="badge">{{hero.id}} </span>{{hero.name}}</a>
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span>
+      {{hero.name}}
+    </a>
+    <button class="delete" title="delete hero" (click)="delete(hero)">x</button>
   </li>
 </ul>
-<!--Esto ya no se utiliza, pero lo dejo comentado por si me quiero acordar del property binding.-->
-<!--Aqui hacemos un "property binding" de selectedHero a la propiedad/variable hero de hero-detail-->
-<!--<app-hero-detail [hero]="selectedHero"></app-hero-detail>-->
+<div>
+  <label>Hero name:
+    <input #heroName />
+  </label>
+  <button (click)="add(heroName.value); heroName.value=''">
+    add
+  </button>
+</div>
+
+
+<!--
+Copyright Google LLC. All Rights Reserved.
+Use of this source code is governed by an MIT-style license that
+can be found in the LICENSE file at http://angular.io/license
+-->
